ui-tests/tests/ui/bad_value1.stderr
error: expected a string, but found `?`
 --> $DIR/bad_value1.rs:6:14
  |
6 |     string = ?
  |              ^
