ui-tests/tests/ui/bad_value1.rs
// Copyright 2020 Oxide Computer Company

use testlib::annotation;

#[annotation {
    string = ?
}]
fn test() {}

fn main() {}
